Message_Controller Changes Json

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -10,7 +10,7 @@
   <tbody>
     <% @message.each do |message| %>
       <tr>
-        <td><%= link_to 'Show', message%> <%=message.cipher%> <%=message.recipient_id %></td>
+        <td><%= link_to 'Show', message%> <%=message.id%> <%=message.timestamp %></td>
         <td><%= link_to 'Edit', edit_message_path(message) %></td>
         <td><%= link_to 'Destroy', message, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
