--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,8 +10,8 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
+        <td><%= user.pubkey_user %></td>
+        <td><%= user.identity %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
